--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,9 @@ header>ul {
     color: fuchsia;
     list-style-position: none;
 }
+.in2 {
+color: fuchsia;
+}
 
 section {
     color: #3aa598;
