--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ ul li {
 ol { color: fuchsia;
     list-postion: inside;
         list-style-type: upper-roman;
+}
 
 body {
     background-color: rgb(0, 0, 0);
