--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@
 ul li {
     list-style-type: none;
 }
-ol { color: fuchsia;
-    list-postion: inside;
-        list-style-type: upper-roman;
+ol { 
+     color: fuchsia;
+     list-postion: inside;
+     list-style-type: upper-roman;
 }
 
 body {
@@ -217,12 +218,12 @@ header>ul {
     color: fuchsia;
     list-style-position: none;
 }
-.in2 {
+/*.in2 {
     color: fuchsia;
     list-style-position: inside;
     list-stye-type: upper-roman;
    
-}
+}*/
 
 section {
     color: #3aa598;
