--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ ol {
      list-postion: inside;
      list-style-type: upper-roman;
      text-align: center;
+    justify-content: center;
 }
 
 body {
