--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ ul li {
 }
 ol { 
      color: fuchsia;
-     list-postion: inside;
+     list-postion: outside;
      list-style-type: upper-roman;
      text-align: center;
     justify-content: center;
