--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,15 @@
 ul li {
     list-style-type: none;
 }
+
+div ol {
+        display: block;
+        font-size: 18px;
+        counter-increment: list;
+        list-style-type: upper-roman;
+        position: relative;
+    }
+
 ol { 
      color: fuchsia;
      list-postion: outside;
