--- a/styles.css
+++ b/styles.css
@@ -233,12 +233,12 @@ header>ul {
     color: fuchsia;
     list-style-position: none;
 }
-/*.in2 {
-    color: fuchsia;
-    list-style-position: inside;
-    list-stye-type: upper-roman;
-   
-}*/
+ .in2 {
+        color: fuchsia;
+        list-stye-position: inside;
+        list-style-type: upper-roman;
+        display: block;
+    }
 .center {
         text-align: center;
         justify-contents: center;
