--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,9 @@ ol {
         margin-left: 45%;
     }
 
-
+ol li::marker {
+color: lightyellow;
+}
 body {
     background-color: rgb(0, 0, 0);
 }
